<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name" translatable="false">Open Map</string>

    <string name="unknown">Unknown</string>
    <string name="map_mode">Map Source</string>
    <string name="my_location">My location</string>
    <string name="offline">Offline mode</string>
    <string name="samples">Samples</string>
    <string name="about">About</string>
    <string name="about_message">This software uses map data provided by OpenStreetMap.org</string>

    <string name="first_fix_message">Got the first fix</string>

    <string name="set_mode_offline">Set to offline mode</string>
    <string name="set_mode_online">Set to online mode</string>

    <string name="set_mode_show_me">showing and tracking my current location</string>
    <string name="set_mode_hide_me">hiding my current location</string>

    <string name="format_distance_meters">%s m</string>
    <string name="format_distance_kilometers">%s km</string>
    <string name="format_distance_miles">%s mi</string>
    <string name="format_distance_nautical_miles">%s nm</string>
    <string name="format_distance_feet">%s ft</string>

    <string name="compass">Compass</string>
    <string name="cancel">Cancel</string>
    <string name="cache_current_size">Cache Current Size</string>
    <string name="cache_manager">Cache Manager</string>
    <string name="cache_manager_description">The Cache Manager lets you manage what\'s cached on this device and enables you to download and cache tiles locally. Keep in mind, there may be legal implications. Use with caution and be sure to read the usage agreement(s) or terms of service with the tile source.</string>
    <string name="cache_download">Start Download</string>
    <string name="sdcardstate">External Storage State:</string>
    <string name="osmdroid_welcome">Welcome to the osmdroid example app. This app is used to demonstrate some of osmdroid\'s features and functions. Enjoy! Please report any issues to https://github.com/osmdroid/osmdroid</string>

    <string name="bt_center_map_description">Center on my location</string>
    <string name="bt_follow_me_description">Follow me</string>
    <string name="debug_mode">Debug Mode</string>
    <string name="tile_provider_debugging">Tile Provider Debugging</string>
    <string name="cache_directory">Cache Directory</string>
    <string name="base_directory">Base Directory (we search for tile archives here)</string>
    <string name="enable_mapview_hardware_acceleration">Enable MapView Hardware Acceleration (normally off)</string>
    <string name="purge_cache">Purge Cache</string>
    <string name="enter_cache_location">Enter Cache Location</string>
    <string name="pick_cache_location">Pick Cache Location</string>
    <string name="enter_base_location">Enter Base Location</string>
    <string name="pick_base_location">Pick Base Location</string>
    <string name="debug_logging_downloading">Debug Downloading</string>
    <string name="enterCacheLocation">Pick Location</string>
    <string name="extend_downloaded_tiles_by_this_much_time_in_milliseconds">Extend downloaded tiles by this much time (in milliseconds)</string>
    <string name="time_to_wait_for_a_gps_fix_to_switch_to_network_based_location_ms">Time to wait for a GPS fix to switch to Network based location (ms)</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="map_tile_file_system_max_queue_size">Map tile file system max queue size</string>
    <string name="file_system_loading_threads">File system loading threads</string>
    <string name="in_memory_tile_cache_size">In memory tile cache size</string>
    <string name="map_tile_download_max_queue_size">Map tile download max queue size</string>
    <string name="tile_download_threads">Tile download threads</string>
    <string name="downloads_memory_cache_and_offline_storage_settings">Downloads, Memory Cache and Offline Storage Settings</string>
    <string name="http_user_agent_to_use_when_downloading">HTTP User Agent to use when downloading</string>
    <string name="logging_and_debugging">Logging and Debugging</string>
    <string name="map_view_debug">Map View Debug</string>
    <string name="cache_management">Cache Management</string>
    <string name="reset_to_defaults">Reset to defaults</string>
    <string name="total_rows">Total rows</string>
    <string name="cache_size_bytes">Cache size </string>
    <string name="loading_stats">Loading stats...</string>
    <string name="cache_analyzer_tasks">Cache Analyzer Tasks</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="userconfirm">Are you sure?</string>
    <string name="done">I Agree</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="visit_our_site_on_github">Visit our site on Github</string>
    <string name="open_map_description">Open Map is a demo application for the osmdroid software library. It\'s purpose is to show how to use the various functions and capabilities of osmdroid. \n \nosmdroid is a (almost) full/free replacement for Android\'s MapView (v1 API) class. It also includes a modular tile provider system with support for numerous online and offline tile sources and overlay support with built-in overlays for plotting icons, tracking location, and drawing shapes.\n \nGood news: It\'s free and open source!\n \nWe rely on volunteers to keep osmdroid going and welcome contributions of all types.</string>
    <string name="osmdroid_demo_app">osmdroid demo app</string>
    <string name="permissions">Permissions</string>
    <string name="osmdroid_needs_some_permissions_to_get_going_it_works_in_most_cases_without_them_but_not_all_examples_will_function_correctly">osmdroid needs some permissions to get going. It works in most cases without them, but not all examples will function correctly.</string>
    <string name="location_gps">Location/GPS</string>
    <string name="gpspermissiondescription">This is needed to place an icon on the map where this device is located.</string>
    <string name="permissionsrequest">osmdroid needs some permissions to get going. It works in most cases without them, but not all examples will function correctly.</string>
    <string name="storage_access">Storage Access</string>
    <string name="permissionstoragedescription">osmdroid provides access to online maps from a variety of sources. Online maps are chopped up into millions of small images called tiles. To save you bandwidth, osmdroid caches those tiles on your device as they are downloaded. Without this permission, tiles are stored in this application\'s prviate storage area, typically on the devices internal storage. With this permission, you can store the cache at any writable location, such as an sdcard. When stored on the sdcard, other apps that use osmdroid will share the same cache which saves you space on your device.</string>
    <string name="ask_for_permissions">Ask for Permissions</string>
    <string name="cache_storage">Cache Storage</string>
    <string name="introalmostthere">Almost there! We just wanted to confirm that that location we selected automatically, is ok with you storing the map tile cache</string>
    <string name="current_location">Current Location:</string>
    <string name="close">Close</string>
    <string name="cancelall">Cancel All Jobs</string>
    <string name="showpendingjobs">Pending Job Count</string>
    <string name="enable_mapview_verticalscrolling">Enable vertical scrolling across the poles</string>
</resources>
